adjust alignment of footer, header, fix naviagtion bar

--- a/css/main.css
+++ b/css/main.css
@@ -140,9 +140,14 @@ blockquote p {
 
 .masthead {
   padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  margin-bottom: 4rem;
+  padding-bottom: 0rem;
+  margin-bottom: 0.6em;
   font-family: "Quattrocento Sans", sans-serif;
+  border-bottom: 1px solid grey;
+  min-height: 80px;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .masthead a:hover {
@@ -153,10 +158,12 @@ blockquote p {
   font-size: 1.3rem;
   text-decoration: none;
   color: #505050;
+  padding-bottom: 1.5em;
 }
 
 .masthead-subtitle {
   color: #999;
+  padding-bottom: 0.5em;
 }
 
 /*
@@ -165,12 +172,18 @@ blockquote p {
 
 .post-container {
   margin-bottom: 4rem;
+  padding-top: 0.5em;
 }
 
 .posts {
   margin-bottom: 5rem;
   padding: 0px;
   list-style: none;
+  text-align: justify;
+  text-justify: inter-word;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .post-date {
@@ -256,19 +269,27 @@ blockquote p {
 */
 
 .menu {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  display: block;
-}
+  float: right;
+  margin: 0;
+  position: relative;
+  padding: 0;
+  pointer-events: all;
+  cursor: pointer;
 
-.menu-content {
-  float: left;
+  li {
+    display: inline-block;
+    padding: 0 .6em;
+  }
+
+  a {
+    @extend .link;
+  }
 }
 
 .menu-content a {
-  color: #999;
+  color: #0086B3;
   font-size: 1.1rem;
-  padding-right: 10px;
+  padding: 0.5em;
 }
 
 .social-icons {
